--- a/StrengthTrackerWeb/StrengthTrackerWeb/StrengthTrackerWeb.csproj
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/StrengthTrackerWeb.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Content\js\newWorkoutController.js" />
+    <Content Include="Content\js\_app.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
