--- a/StrengthTrackerWeb/StrengthTrackerWeb/package.json
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
