--- a/StrengthTrackerWeb/StrengthTrackerWeb/StrengthTrackerWeb.csproj
+++ b/StrengthTrackerWeb/StrengthTrackerWeb/StrengthTrackerWeb.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Content\js\newWorkoutController.js" />
+    <Content Include="Content\js\currentWorkoutController.js" />
     <Content Include="Content\js\_app.js" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
