--- a/LB.Web/LB.Web/package.json
+++ b/LB.Web/LB.Web/package.json
@@ -11,7 +11,8 @@
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
-    "rimraf": "2.2.8"
+    "rimraf": "2.2.8",
+    "gulp-clean-css": "^3.9.3"
   },
   "dependencies": {
     "angular": "1.6.9"
