--- a/LB.Web/LB.Web/package.json
+++ b/LB.Web/LB.Web/package.json
@@ -15,6 +15,7 @@
     "gulp-clean-css": "^3.9.3"
   },
   "dependencies": {
-    "angular": "1.6.9"
+    "angular": "1.6.9",
+    "chart.js": "^2.7.2"
   }
 }
