Adding ASP.NET Core individual user accounts.

--- a/LB.Web/LB.Web/appsettings.json
+++ b/LB.Web/LB.Web/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-15305094-30B3-4FA9-9514-B7EFDD4A153C;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
